--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heilpraktikerin Hayjet</title>
-    <link rel="stylesheet" href="/Hayjet-Heilpraktikerin/assets/src/css/index.css">
+    <link rel="stylesheet" href="/assets/src/css/index.css">
     <link rel="shortcut icon" href="/Hayjet-Heilpraktikerin/assets/src/img/flavicon/favicon_io/favicon.ico"
         type="image/x-icon">
 </head>
@@ -39,24 +39,22 @@
         </div>
     </section>
 
-    <!--About-->
-    <section class="card-section">
-        <div class="card-content">
-            <div class="card-header">
-                <h5 class="card-headline">Akkupunktur</h5>
+    <!--Angebote bentobox-->
+    <section class="bento-section">
+        <div class="bento">
+            <div class="bento-links">
+                <div class="links-1">box1</div>
+                <div class="links-2">box2</div>
+                <div class="links-3">box3</div>
             </div>
-            <div class="card-img">
-                <img src="/Hayjet-Heilpraktikerin/assets/src/img/content/card/Akupunktur-ansikt.jpg"
-                    alt="Frau mit akkupunkturnadeln im Gesicht">
-            </div>
-            <div class="card-footer">
-                <ul>
-                    <li></li>
-                </ul>
 
-                <a class="order-btn" href="#">Termin sofot vereinbaren</a>
+            <div class="bento-rechts">
+                <div class="rechts-1">box4</div>
+                <div class="rechts-2">box5</div>
+                <div class="rechts-3">box6</div>
             </div>
         </div>
     </section>
+</body>
 
 </html>
